Testing and fixing firmware installation.

--- a/arch/am335x/sysbios/pbl.cfg
+++ b/arch/am335x/sysbios/pbl.cfg
@@ -105,7 +105,7 @@ Task.idleTaskStackSize = 1024;
 
 
 /* Circular buffer size for System_printf() */
-SysMin.bufSize = 128;
+SysMin.bufSize = 256;
 
 /*
  * Create and install logger for the whole system
@@ -115,7 +115,7 @@ SysMin.bufSize = 128;
 //Load.common$.diags_USER4 = Diags.ALWAYS_ON;
 
 System.SupportProxy = SysMin;
-SysMin.outputFxn = "&Uart_write";
+SysMin.outputFxn = "&logWrite";
 Error.raiseHook = null;
 //Error.raiseHook = "&onSystemError";
 
