Added gcc-multilib to cross-compile instructions.

--- a/.gitignore
+++ b/.gitignore
@@ -21,18 +21,10 @@ tmp/
 *.o
 *.obj
 
-# Precompiled Headers
-*.gch
-*.pch
-
 # Compiled Dynamic libraries
 *.so
 *.dylib
 *.dll
-
-# Fortran module files
-*.mod
-*.smod
 
 # Compiled Static libraries
 *.lai
@@ -44,3 +36,4 @@ tmp/
 *.exe
 *.out
 *.app
+*.elf
