--- a/.github/workflows/make-emu.yml
+++ b/.github/workflows/make-emu.yml
@@ -25,6 +25,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install dependencies
-      run: brew install gcc sdl2 sdl2_ttf fftw3 swig
+      run: brew install gcc sdl2 sdl2_ttf fftw swig
     - name: make emu
       run: make emu
