--- a/.github/workflows/make-emu.yml
+++ b/.github/workflows/make-emu.yml
@@ -13,6 +13,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: update package list
+      run: sudo apt update
     - name: install dependencies
       run: sudo apt install build-essential libsdl2-dev libsdl2-ttf-dev libfftw3-dev swig python3 zip fonts-freefont-ttf
     - name: make emu
